K1J-1603: Updates after discussion